Fixed Images and fonts

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <div id="bg"></div>
       <div id="content">
 
-        <h1 id="title">Edytor tekstu stworzony specjalnie dla twojej wygody pisania</h1>
+        <d1 id="title">Edytor tekstu stworzony specjalnie dla twojej wygody pisania</d1>
 
         <div class="light top">
-          <h2 id="download">Wersja 1.3.1 <d>(αlpha)</d></h2>
+          <d2 id="download">Wersja 1.3.1 <d>(αlpha)</d></d2>
           <button id="download" onclick="location.href = 'https://github.com/Ph0enixKM/Odyssey/releases/download/1.3.1/Odyssey.1.3.1.rar'">
             Pobierz
             <!-- <img src="images/download.png"> -->
@@ -28,33 +28,33 @@
         </div>
         <div class="dark">
           <div>
-            <h1 id="title">Przejdź na ciemną stronę mocy</h1>
+            <d1 id="title">Przejdź na ciemną stronę mocy</d1>
             <br>
             <img src="images/darkTheme.png" class="mini">
           </div>
 
           <div class="top">
-            <h1 id="title">Manipuluj stronami w taki sposób jakby to była kartka papieru</h1>
+            <d1 id="title">Manipuluj stronami w taki sposób jakby to była kartka papieru</d1>
             <br>
             <img src="images/pages.png" class="mini">
           </div>
 
           <div class="top">
-            <h1 id="title">Ciesz się własnym edytorem tekstu, za którego nie musisz nic płacić</h1>
+            <d1 id="title">Ciesz się własnym edytorem tekstu, za którego nie musisz nic płacić</d1>
             <br>
             <img src="images/laur.png" class="mini">
           </div>
         </div>
 
-        <h1 id="title"> Kontakt w razie problemów i bugów</h1>
+        <d1 id="title"> Kontakt w razie problemów i bugów</d1>
         <side id="contact" class="bottom">
           <div>
             <img id="contact" src="images/profilowe.jpg">
           </div>
 
           <div>
-            <h3><d>Email:</d> pkaras.it@gmail.com</h2>
-            <h3><d>Facebook:</d> facebook.com/Ph0enixArts/</h2>
+            <d3><d>Email:</d> pkaras.it@gmail.com</d3>
+            <d3><d>Facebook:</d> facebook.com/Ph0enixArts/</d3>
           </div>
         </side>
 
