Alpha Odyssey WebSite

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html>
   <head>
     <meta charset="utf-8">
     <title>Odyssey</title>
@@ -16,7 +16,7 @@
       <div id="bg"></div>
       <div id="content">
 
-        <d1 id="title">Edytor tekstu stworzony specjalnie dla twojej wygody pisania</d1>
+        <d1 id="title" class="havana">Edytor tekstu stworzony specjalnie dla twojej wygody pisania</d1>
 
         <div class="light top">
           <d2 id="download">Wersja 1.3.1 <d>(αlpha)</d></d2>
@@ -46,17 +46,21 @@
           </div>
         </div>
 
-        <d1 id="title"> Kontakt w razie problemów i bugów</d1>
+        <d1 id="title" class="havana"> Kontakt w razie problemów i bugów</d1>
         <side id="contact" class="bottom">
           <div>
             <img id="contact" src="images/profilowe.jpg">
           </div>
 
           <div>
-            <d3><d>Email:</d> pkaras.it@gmail.com</d3>
-            <d3><d>Facebook:</d> facebook.com/Ph0enixArts/</d3>
+            <d3><d><b>Email:</b></d> <copy onclick="location.href = 'mailto:pkaras.it@gmail.com'">pkaras.it@gmail.com</copy></d3>
+            <d3><d><b>Facebook:</b></d> <copy onclick="location.href = 'https://www.facebook.com/Ph0enixArts/'">facebook.com/Ph0enixArts/</copy></d3>
           </div>
         </side>
+
+        <div class="light top">
+          <d3>Copyright © Wszelkie prawa zastrzeżone</d3>
+        </div>
 
       </div>
     </div>
