Title header fixed

--- a/index.html
+++ b/index.html
@@ -16,19 +16,18 @@
       <div id="bg"></div>
       <div id="content">
 
-        <d1 id="title" class="havana">Edytor tekstu stworzony specjalnie dla twojej wygody pisania</d1>
+        <d1 id="title">Edytor tekstu stworzony specjalnie dla twojej <b>wygody</b> pisania</d1>
 
         <div class="light top">
           <d2 id="download">Wersja 1.3.1 <d>(αlpha)</d></d2>
           <button id="download" onclick="location.href = 'https://github.com/Ph0enixKM/Odyssey/releases/download/1.3.1/Odyssey.1.3.1.rar'">
             Pobierz
-            <!-- <img src="images/download.png"> -->
             <img src="images/windows.png">
           </button>
         </div>
         <div class="dark">
           <div>
-            <d1 id="title">Przejdź na ciemną stronę mocy</d1>
+            <d1 id="title">Przejdź na ciemną stronę mocy, ciemny layout nie będzie męczyć twoich oczu</d1>
             <br>
             <img src="images/darkTheme.png" class="mini">
           </div>
