Update control system

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -24,7 +24,7 @@
 
 
     <div class="menubar">
-        <div class="bar">Odyseja (pre-beta): <span>&lt;Brak tytułu&gt;</span> </div>
+        <div class="bar"><t>Odyseja</t> (<v><i>test</i></v>): <span>&lt;Brak tytułu&gt;</span> </div>
         <div class="minimize"></div>
         <div class="maximize"></div>
         <div class="exit"></div>
