Insert -> Design tab

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -73,8 +73,10 @@
       </div>
 
       <!-- Modes -->
-      <div id="insert">
+      <div id="design">
         <div id="image" title="Wstaw obraz"></div>
+        <div id="fg" title="Kolor tekstu"></div>
+        <div id="bg" title="Tło tekstu"></div>
       </div>
       <div id="view">
         <div id="full-view" title="Pełen Widok"></div>
@@ -107,7 +109,7 @@
 
     <div class="menu">
       <button>Narzędzia</button>
-      <button>Wstawianie</button>
+      <button>Projektowanie</button>
       <button>Widok</button>
       <button>Strony</button>
       <button>Projekt</button>
@@ -260,7 +262,7 @@
     <script src="src/index/script.js"></script>
     <script src="src/index/widok.js"></script>
     <script src="src/index/strony.js"></script>
-    <script src="src/index/insert.js"></script>
+    <script src="src/index/design.js"></script>
     <script src="src/index/input.js"></script>
     <script src="src/index/spell.js"></script>
     <script src="src/index/resizer.js"></script>
