Added font changes

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -6,6 +6,7 @@
     <link href="bin/css/master.css" rel="stylesheet">
     <link href="bin/css/toolbar.css" rel="stylesheet">
     <link href="bin/css/settings.css" rel="stylesheet">
+    <link href="bin/css/color-picker.css" rel="stylesheet">
   </head>
   <body  draggable="false" ondragstart="return false">
     <div id="all">
@@ -75,8 +76,8 @@
       <!-- Modes -->
       <div id="design">
         <div id="image" title="Wstaw obraz"></div>
-        <div id="fg" title="Kolor tekstu"></div>
-        <div id="bg" title="Tło tekstu"></div>
+        <div id="fg-text" title="Kolor tekstu"></div>
+        <div id="bg-text" title="Tło tekstu"></div>
       </div>
       <div id="view">
         <div id="full-view" title="Pełen Widok"></div>
@@ -257,6 +258,7 @@
 
     <script src="src/libs/tippy.all.min.js"></script>
     <script src="src/libs/popup.js"></script>
+    <script src="src/libs/color-picker.js"></script>
     <script src="src/index/script.js"></script>
     <script src="src/index/widok.js"></script>
     <script src="src/index/strony.js"></script>
