Fixed Images and installer

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -257,14 +257,14 @@
     </div>
 
     <script src="src/libs/popup.js"></script>
-    <script src="src/index/script.js"></script>
     <script src="src/libs/tippy.all.min.js"></script>
     <script src="src/libs/color-picker.js"></script>
-    <script src="src/index/widok.js"></script>
+    <script src="src/index/script.js"></script>
+    <!-- <script src="src/index/widok.js"></script>
     <script src="src/index/strony.js"></script>
     <script src="src/index/design.js"></script>
     <script src="src/index/input.js"></script>
     <script src="src/index/spell.js"></script>
-    <script src="src/index/resizer.js"></script>
+    <script src="src/index/resizer.js"></script> -->
   </body>
 </html>
