--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <d1 id="title">Edytor tekstu stworzony specjalnie dla twojej <b>wygody</b> pisania</d1>
 
         <div class="light top">
-          <d2 id="download">Wersja 1.3.1 <d>(αlpha)</d></d2>
-          <button id="download" onclick="location.href = 'https://github.com/Ph0enixKM/Odyssey/releases/download/1.3.1/Odyssey.1.3.1.rar'">
+          <d2 id="download">Wersja 1.4.0 <d>(βeta)</d></d2>
+          <button id="download" onclick="location.href = 'https://github.com/Ph0enixKM/Odyssey/archive/1.4.0.zip'">
             <span>Pobierz</span>
             <img src="images/windows.png">
           </button>
