--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="light top">
           <d2 id="download">Wersja 1.4.0 <d>(βeta)</d></d2>
-          <button id="download" onclick="location.href = 'https://github.com/Ph0enixKM/Odyssey/archive/1.4.0.zip'">
+          <button id="download" onclick="location.href = 'https://github.com/Ph0enixKM/Odyssey/releases/download/1.4.0/Odyssey-1.4.0.rar'">
             <span>Pobierz</span>
             <img src="images/windows.png">
           </button>
