Improved size system

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -56,15 +56,7 @@
           <option disabled>───────────────</option>
           <option l selected>Lato</option>
         </select>
-        <select title="Wielkość Fonta" font-size>
-          <option value="1">12px</option>
-          <option value="2">16px</option>
-          <option value="3" selected>18px</option>
-          <option value="4">22px</option>
-          <option value="5">29px</option>
-          <option value="6">39px</option>
-          <option value="7">57px</option>
-        </select>
+        <input type="number" font-size value="18" title="Wielkość Fonta">
         <div class="justify" title="Położenie tekstu">
           <div id="justify-left"></div>
           <div id="justify-center"></div>
