Added multiplatform version

--- a/index.html
+++ b/index.html
@@ -20,9 +20,17 @@
 
         <div class="light top">
           <d2 id="download">Wersja 1.4.0 <d>(βeta)</d></d2>
-          <button id="download" onclick="location.href = 'https://github.com/Ph0enixKM/Odyssey/releases/download/1.4.0/Odyssey-1.4.0.rar'">
-            <span>Pobierz</span>
+          <button id="download" onclick="location.href = 'https://github.com/Ph0enixKM/Odyssey/releases/download/1.4.0/Odyssey-1.4.0.windows.rar'">
+            <span>Windows</span>
             <img src="images/windows.png">
+          </button>
+          <button id="download" onclick="location.href = 'https://github.com/Ph0enixKM/Odyssey/releases/download/1.4.0/Odyssey-1.4.0.linux.zip'">
+            <span>Linux</span>
+            <img src="images/linux.png">
+          </button>
+          <button id="download" onclick="location.href = 'https://github.com/Ph0enixKM/Odyssey/releases/download/1.4.0/Odyssey-1.4.0.mac.zip'">
+            <span>Mac</span>
+            <img src="images/mac.png">
           </button>
         </div>
         <div class="dark">
