--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
 
     <div id="cont">
       <div id="bg"></div>
+      <div id="jumbotron">Mroczny edytor tekstu</div>
+      <div id="gradient"></div>
+      <div id="arrow"></div>
       <div id="content">
 
-        <d1 id="title">Edytor tekstu stworzony specjalnie dla twojej <b>wygody</b> pisania</d1>
+        <d1 id="title" class="orange">Edytor tekstu stworzony specjalnie dla twojej <b>wygody</b> pisania</d1>
 
         <div class="light top">
           <d2 id="download">Wersja 1.4.0 <d>(βeta)</d></d2>
