--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div id="cont">
       <div id="bg"></div>
-      <div id="jumbotron">Mroczny edytor tekstu</div>
+      <div id="jumbotron">Nocny edytor tekstu</div>
       <div id="gradient"></div>
       <div id="arrow"></div>
       <div id="content">
@@ -23,7 +23,7 @@
 
         <div class="light top">
           <d2 id="download">Wersja 1.4.0 <d>(βeta)</d></d2>
-          <button id="download" onclick="location.href = 'https://github.com/Ph0enixKM/Odyssey/releases/download/1.4.0/Odyssey-1.4.0.windows.rar'">
+          <button id="download" onclick="location.href = 'https://github.com/Ph0enixKM/Odyssey/releases/download/1.4.0/Odyssey-1.4.0.windows.zip'">
             <span>Windows</span>
             <img src="images/windows.png">
           </button>
