--- a/index.html
+++ b/index.html
@@ -27,30 +27,30 @@
             <span>Windows</span>
             <img src="images/windows.png">
           </button>
-          <button id="download" onclick="location.href = 'https://github.com/Ph0enixKM/Odyssey/releases/download/1.4.0/Odyssey-1.4.0.linux.zip'">
-            <span>Linux</span>
-            <img src="images/linux.png">
-          </button>
           <button id="download" onclick="location.href = 'https://github.com/Ph0enixKM/Odyssey/releases/download/1.4.0/Odyssey-1.4.0.mac.zip'">
             <span>Mac</span>
             <img src="images/mac.png">
           </button>
+          <button id="download" onclick="location.href = 'https://github.com/Ph0enixKM/Odyssey/releases/download/1.4.0/Odyssey-1.4.0.linux.zip'">
+            <span>Linux</span>
+            <img src="images/linux.png">
+          </button>
         </div>
-        <div class="dark">
+        <div class="dark" adv>
           <div>
-            <d1 id="title" uno>Przejdź na ciemną stronę mocy, ciemny layout nie będzie męczyć twoich oczu</d1>
+            <d1 id="title" uno>Ciemny Layout, Mroczny Design</d1>
             <br>
             <img src="images/darkTheme.png" class="mini">
           </div>
 
           <div class="top">
-            <d1 id="title" dos>Manipuluj stronami w taki sposób jakby to była kartka papieru</d1>
+            <d1 id="title" dos>Swoboda manipulowania stronami</d1>
             <br>
             <img src="images/pages.png" class="mini">
           </div>
 
           <div class="top">
-            <d1 id="title" tres>Ciesz się własnym edytorem tekstu, za którego nie musisz nic płacić</d1>
+            <d1 id="title" tres>Darmowe korzystanie</d1>
             <br>
             <img src="images/laur.png" class="mini">
           </div>
