Light Theme initialized

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Odyssey</title>
-    <link href="bin/css/master.css" rel="stylesheet">
-    <link href="bin/css/toolbar.css" rel="stylesheet">
-    <link href="bin/css/settings.css" rel="stylesheet">
-    <link href="bin/css/color-picker.css" rel="stylesheet">
+    <link href="styles/css/master.css" rel="stylesheet">
+    <link href="styles/css/toolbar.css" rel="stylesheet">
+    <link href="styles/css/settings.css" rel="stylesheet">
+    <!-- <link href="styles/css/master-light.css" rel="stylesheet">
+    <link href="styles/css/toolbar-light.css" rel="stylesheet">
+    <link href="styles/css/settings-light.css" rel="stylesheet"> -->
+    <link href="styles/css/color-picker.css" rel="stylesheet">
   </head>
   <body  draggable="false" ondragstart="return false">
     <div id="all">
@@ -181,7 +184,7 @@
         <div class="tools">
           <div class="general">
             Ogólne
-          </div><div class="themes" disabled>
+          </div><div class="themes">
             Wygląd
           </div>
         </div>
@@ -243,15 +246,15 @@
 
         </div>
       </div>
-      <div id="bg">
-
+      <div id="skins">
+        <!-- TODO: Create skins tab  -->
       </div>
     </div>
 
     <script src="src/libs/popup.js"></script>
     <script src="src/libs/tippy.all.min.js"></script>
     <script src="src/libs/color-picker.js"></script>
-    <script src="src/index/script.js"></script>
+    <script src="src/js/script.js"></script>
     <!-- <script src="src/index/widok.js"></script>
     <script src="src/index/strony.js"></script>
     <script src="src/index/design.js"></script>
