--- a/app/public/print.html
+++ b/app/public/print.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="bin/css/print.css" rel="stylesheet">
-    <script src="src/print/print.js"></script>
+    <script src="src/js/print.js"></script>
   </head>
   <body>
     <!-- Printing Content -->
