Themes UI Added

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -180,6 +180,7 @@
     </div>
 
     <div class="settings">
+      <div id="bg"></div>
       <div class="setting">
         <div class="tools">
           <div class="general">
@@ -245,9 +246,19 @@
           </div>
 
         </div>
-      </div>
-      <div id="skins">
-        <!-- TODO: Create skins tab  -->
+        <div id="skins">
+          <h1>Choose Theme</h1>
+          <span class="theme">
+              <img src="arts/dark.png">
+              <p>Flame</p>
+          </span>
+          <span class="theme">
+              <img src="arts/light.png">
+              <p>Industrial</p>
+          </span>
+
+          <!-- TODO: Create skins tab  -->
+        </div>
       </div>
     </div>
 
